--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,12 @@
 	<description>GraphQL using another maven</description>
 
 	<properties>
-		<spring.boot.version>2.4.7</spring.boot.version>
+		<spring.boot.version>2.1.0.RELEASE</spring.boot.version>
 		<java.version>1.8</java.version>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<graphql.version>11.0.0</graphql.version>
 	</properties>
 
 	<dependencies>
@@ -42,19 +43,59 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.graphql-java</groupId>
+			<groupId>com.graphql-java-kickstart</groupId>
 			<artifactId>graphql-spring-boot-starter</artifactId>
-			<version>5.0.2</version>
+			<version>${graphql.version}</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.graphql-java-kickstart</groupId>-->
+<!--			<artifactId>graphql-java-tools</artifactId>-->
+<!--			<version>5.4.1</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.graphql-java</groupId>-->
+<!--			<artifactId>graphql-spring-boot-starter</artifactId>-->
+<!--			<version>3.10.0</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.graphql-java</groupId>-->
+<!--			<artifactId>graphql-java-tools</artifactId>-->
+<!--			<version>4.3.0</version>-->
+<!--		</dependency>-->
+
+<!--		&lt;!&ndash; adding maven dependency for scalar &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>com.graphql-java</groupId>-->
+<!--			<artifactId>graphql-java</artifactId>-->
+<!--			<version>7.0</version>-->
+<!--		</dependency>-->
+
+		<!-- adding maven dependency for scalar in OffsetDateTime and BigDecimal-->
 		<dependency>
 			<groupId>com.graphql-java</groupId>
-			<artifactId>graphql-java-tools</artifactId>
-			<version>5.2.4</version>
+			<artifactId>graphql-java-extended-scalars</artifactId>
+			<version>16.0.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.graphql-java</groupId>
+					<artifactId>graphql-java</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+
+		<!-- adding maven dependency for graphiql, not for graphql -->
+<!--		<dependency>-->
+<!--			<groupId>com.graphql-java</groupId>-->
+<!--			<artifactId>graphiql-spring-boot-starter</artifactId>-->
+<!--			<version>4.3.0</version>-->
+<!--		</dependency>-->
+
+		<!-- adding maven dependency for graphiql, not for graphql -->
 		<dependency>
-			<groupId>com.graphql-java</groupId>
-			<artifactId>graphql-java-servlet</artifactId>
-			<version>4.7.0</version>
+			<groupId>com.graphql-java-kickstart</groupId>
+			<artifactId>graphiql-spring-boot-starter</artifactId>
+			<version>${graphql.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
@@ -77,6 +118,12 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 	</build>
 
 </project>
